cmake_minimum_required(VERSION 3.13)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP
        1/main.cpp
        1/PartyMember.cpp
        1/PartyMember.h
        1/Party.cpp
        1/Party.h
        1/Knesset.cpp
        1/Knesset.h
        1/example.cpp
        2/Course.cpp
        2/Course.h
        2/Student.h
        2/Student.cpp
        2/main.cpp
        3/main.cpp
        3/Employee.cpp
        3/Employee.h
        3/Company.cpp
        3/Company.h
        4/main.cpp
        4/Node.cpp
        4/Node.h
        4/LinkedList.cpp
        4/LinkedList.h
        5/main.cpp
        5/String.cpp
        5/String.h
        5/IndexOutOfBounds.h
        )
