cmake_minimum_required(VERSION 3.13)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP
        1/main.cpp
        1/PartyMember.cpp
        1/PartyMember.h
        1/Party.cpp
        1/Party.h
        1/Knesset.cpp
        1/Knesset.h
        1/example.cpp
        2/Course.cpp
        2/Course.h
        2/Student.h
        2/Student.cpp
        2/main.cpp
        3/main.cpp
        3/Employee1.cpp
        3/Employee.h
        3/Company.cpp
        3/Company.h
        4/main.cpp
        4/Node.cpp
        4/Node.h
        4/LinkedList.cpp
        4/LinkedList.h
        5/String.cpp
        5/String.h
        5/IndexOutOfBounds.h
        6/main.cpp
        6/Shapes.h
        7/main.cpp
        7/Expression.h 7/BinaryExpression.h 7/Plus.h 7/Number.h 7/Minus.h 7/Divide.h 7/Mult.h
        8/Alarm.h 8/Observer.h 8/Observable.h 8/SecurityAlarm.h 8/main.cpp 8/Manager.h 8/Employee1.h 9/main.cpp 9/Device.h 9/Pair.h 9/Laptop.h 9/TouchableDevice.h 9/TouchableLaptop.h 10/main.cpp)
